<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MyDataFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/subtitle_my_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/hint_names"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edit_last_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/hint_last_name_1"
        app:layout_constraintStart_toStartOf="@+id/edit_names"
        app:layout_constraintTop_toBottomOf="@+id/edit_names" />

    <EditText
        android:id="@+id/edit_last_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_last_name_2"
        app:layout_constraintStart_toStartOf="@+id/edit_last_name_1"
        app:layout_constraintTop_toBottomOf="@+id/edit_last_name_1" />

    <EditText
        android:id="@+id/edit_id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint_id_number"
        app:layout_constraintStart_toStartOf="@+id/edit_last_name_2"
        app:layout_constraintTop_toBottomOf="@+id/edit_last_name_2" />

    <Spinner
        android:id="@+id/spinner_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_id_number"
        app:layout_constraintStart_toEndOf="@+id/edit_id_number"
        app:layout_constraintTop_toTopOf="@+id/edit_id_number" />

    <EditText
        android:id="@+id/edit_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/hint_birthday"
        app:layout_constraintStart_toStartOf="@+id/edit_id_number"
        app:layout_constraintTop_toBottomOf="@+id/edit_id_number" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/hint_phone_numer"
        app:layout_constraintStart_toStartOf="@+id/edit_birthday"
        app:layout_constraintTop_toBottomOf="@+id/edit_birthday" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_cancel_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>