<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="app.wiserkronox.loyolasocios.view.ui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="app.wiserkronox.loyolasocios.view.ui.MyDataRegisterFragment"
        android:label="@string/menu_datos"
        tools:layout="@layout/fragment_my_data_register" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="app.wiserkronox.loyolasocios.view.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_pictures"
        tools:layout="@layout/fragment_slideshow" />
</navigation>