<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.home.ListAssemblyFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        cardView:cardCornerRadius="8dp"
        cardView:cardElevation="8dp"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_assembly_curremt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title_current"
                android:layout_width="214dp"
                android:layout_height="108dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/text_title_assembly_demo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:id="@+id/text_date_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/date_demo"
                app:layout_constraintEnd_toEndOf="@+id/text_title_current"
                app:layout_constraintStart_toStartOf="@+id/text_title_current"
                app:layout_constraintTop_toBottomOf="@+id/text_title_current" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/hint_memorys"
                android:src="@drawable/ic_memorys"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_date_current" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/hint_memorys"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/hint_journey"
                android:src="@drawable/ic_journey"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/text_title_current" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/hint_journey"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            <ImageView
                android:id="@+id/icon_user_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/text_icon_state"
                android:src="@drawable/icon_status_user_active"
                app:layout_constraintStart_toEndOf="@+id/text_title_current"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_user_state"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/text_active_state"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.407"
                app:layout_constraintStart_toEndOf="@+id/icon_user_state"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:text="@string/btn_login_zoom"
                app:layout_constraintStart_toEndOf="@+id/text_title_current"
                app:layout_constraintTop_toBottomOf="@+id/icon_user_state" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_assembly_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_current" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAssembly"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        tools:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progress_assembly"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_no_assemblys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/no_assembly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>